fix(css) alignment of inputs text and placeholder
CFY-2893

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -377,7 +377,6 @@ p[tooltip], div[tooltip], td {
 
 input[type=text], input[type=password]{
   height: 32px;
-  line-height: 32px;
   border-radius: 3px;
   padding-left: 10px;
   background-clip: padding-box;
